Adicionado validações paginações e buscas