@@ -6,6 +6,12 @@ import com.juliomesquita.core.services.keycloak.dtos.userflow.UserDataKeycloak;
 import com.juliomesquita.core.services.keycloak.dtos.userflow.UserInformationKeycloak;
 import com.juliomesquita.core.services.keycloak.interfaces.LoginClientKeycloakService;
 import com.juliomesquita.core.services.keycloak.interfaces.UserFlowKeycloakService;
+import com.juliomesquita.core.shared.pagination.Pagination;
+import com.juliomesquita.core.shared.pagination.SearchQuery;
+import com.juliomesquita.core.shared.utils.UtilsMethods;
+import com.juliomesquita.core.shared.validations.Notification;
+import io.vavr.API;
+import io.vavr.control.Either;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpHeaders;
@@ -13,10 +19,8 @@ import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestClient;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
+import java.util.function.Function;
 
 @Component
 public class UserFlowKeycloakServiceImpl implements UserFlowKeycloakService {
@@ -44,95 +48,108 @@ public class UserFlowKeycloakServiceImpl implements UserFlowKeycloakService {
    }
 
    @Override
-   public void updateUser(@NonNull String userId, @NonNull UserDataKeycloak data) {
+   public Either<Notification, Void> updateUser(@NonNull String userId, @NonNull UserDataKeycloak data) {
       final TokenClientKeycloak tokenClient = this.loginClientKeycloakService.getTokenClient();
       final String uri = "/users/%s".formatted(userId);
       final String token = "Bearer %s".formatted(tokenClient.access_token());
 
-      this.restClient
-              .put()
-              .uri(keycloakUrlBase + uri)
-              .headers(headers -> {
-                 headers.add(HttpHeaders.AUTHORIZATION, token);
-                 headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
-              })
-              .body(data)
-              .retrieve()
-              .toBodilessEntity();
+      return API.Try(() -> this.restClient
+                      .put()
+                      .uri(keycloakUrlBase + uri)
+                      .headers(headers -> {
+                         headers.add(HttpHeaders.AUTHORIZATION, token);
+                         headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
+                      })
+                      .body(data)
+                      .retrieve()
+                      .toEntity(Void.class)
+                      .getBody()
+              )
+              .toEither()
+              .bimap(Notification::create, Function.identity());
    }
 
    @Override
-   public void deleteUser(@NonNull String userId) {
+   public Either<Notification, Void> deleteUser(@NonNull String userId) {
       final TokenClientKeycloak tokenClient = this.loginClientKeycloakService.getTokenClient();
       final String uri = "/users/%s".formatted(userId);
       final String token = "Bearer %s".formatted(tokenClient.access_token());
 
-      this.restClient
-              .delete()
-              .uri(keycloakUrlBase + uri)
-              .headers(headers -> {
-                 headers.add(HttpHeaders.AUTHORIZATION, token);
-                 headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
-              })
-              .retrieve()
-              .toBodilessEntity();
+      return API.Try(() -> this.restClient
+                      .delete()
+                      .uri(keycloakUrlBase + uri)
+                      .headers(headers -> {
+                         headers.add(HttpHeaders.AUTHORIZATION, token);
+                         headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
+                      })
+                      .retrieve()
+                      .toEntity(Void.class)
+                      .getBody()
+              )
+              .toEither()
+              .bimap(Notification::create, Function.identity());
    }
 
    @Override
-   public void activateOrDeactivateUser(@NonNull String userId, @NonNull Boolean enabled) {
+   public Either<Notification, Void> activateOrDeactivateUser(@NonNull String userId, @NonNull Boolean enabled) {
       final TokenClientKeycloak tokenClient = this.loginClientKeycloakService.getTokenClient();
       final String uri = "/users/%s".formatted(userId);
       final String token = "Bearer %s".formatted(tokenClient.access_token());
       final Map<String, Object> body = new HashMap<>();
       body.put("enabled", enabled);
 
-      this.restClient
-              .put()
-              .uri(keycloakUrlBase + uri)
-              .headers(headers -> {
-                 headers.add(HttpHeaders.AUTHORIZATION, token);
-                 headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
-              })
-              .body(body)
-              .retrieve()
-              .toBodilessEntity();
+      return API.Try(() -> this.restClient
+                      .put()
+                      .uri(keycloakUrlBase + uri)
+                      .headers(headers -> {
+                         headers.add(HttpHeaders.AUTHORIZATION, token);
+                         headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
+                      })
+                      .body(body)
+                      .retrieve()
+                      .toEntity(Void.class)
+                      .getBody()
+              )
+              .toEither()
+              .bimap(Notification::create, Function.identity());
    }
 
    @Override
-   public List<UserInformationKeycloak> findUsers() {
+   public Either<Notification, Pagination<UserInformationKeycloak>> findUsers(final SearchQuery searchQuery) {
       final TokenClientKeycloak tokenClient = this.loginClientKeycloakService.getTokenClient();
-      final String uri = "/users";
       final String token = "Bearer %s".formatted(tokenClient.access_token());
-
-      return this.restClient
-              .get()
-              .uri(keycloakUrlBase + uri)
-              .headers(headers -> {
-                 headers.add(HttpHeaders.AUTHORIZATION, token);
-                 headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
-              })
-              .retrieve()
-              .body(new ParameterizedTypeReference<List<UserInformationKeycloak>>() {
-              });
-
-   }
-
-   @Override
-   public List<UserInformationKeycloak> findUsersByFilter(@NonNull String email, @NonNull Boolean enabled) {
-      final TokenClientKeycloak tokenClient = this.loginClientKeycloakService.getTokenClient();
       final String uri = "/users";
-      final String token = "Bearer %s".formatted(tokenClient.access_token());
-      final String url = String.format("%s%s?email=%s&enabled=%b", keycloakUrlBase, uri, email, enabled);
+      final String filter = uri + "?%s".formatted(UtilsMethods.createFilter.apply(searchQuery.terms()));
+      final String count = uri + "/count?%s".formatted(UtilsMethods.createFilter.apply(searchQuery.terms()));
 
-      return this.restClient
-              .get()
-              .uri(url)
-              .headers(headers -> {
-                 headers.add(HttpHeaders.AUTHORIZATION, token);
-                 headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
+      return API.Try(() -> {
+                 final List<UserInformationKeycloak> users = Objects.requireNonNull(this.restClient
+                                 .get()
+                                 .uri(keycloakUrlBase + filter)
+                                 .headers(headers -> {
+                                    headers.add(HttpHeaders.AUTHORIZATION, token);
+                                    headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
+                                 })
+                                 .retrieve()
+                                 .body(new ParameterizedTypeReference<List<UserInformationKeycloak>>() {
+                                 }))
+                         .stream()
+                         .sorted(Comparator.comparing(UserInformationKeycloak::firstName))
+                         .toList();
+
+                 final Long countUser = this.restClient
+                         .get()
+                         .uri(keycloakUrlBase + count)
+                         .headers(headers -> {
+                            headers.add(HttpHeaders.AUTHORIZATION, token);
+                            headers.add(HttpHeaders.CONTENT_TYPE, "application/json");
+                         })
+                         .retrieve()
+                         .body(Long.class);
+
+                 return Pagination.create(users, searchQuery.currentPage(), searchQuery.itemsPerPage(), countUser);
               })
-              .retrieve()
-              .body(new ParameterizedTypeReference<List<UserInformationKeycloak>>() {
-              });
+              .toEither()
+              .bimap(Notification::create, Function.identity());
    }
 }
